<resources>
    <string name="app_name">sleepee</string>
    <string name="company">Shenzhen Intelligent Age Technology Co., LTD\nwww.znsdkj.com</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email Adress</string>
    <string name="password">Password</string>
    <string name="forget">Forget?</string>
    <string name="china">China</string>
    <string name="remember">Remember password</string>
    <string name="sign">Sign Up</string>
    <string name="signLine"><u>Sign Up</u></string>
    <string name="login">Login</string>
    <string name="passwordError">Incorrect password,Please confirm again.</string>
    <string name="unregister">Unregistered account,Please register first.</string>
    <string name="inputNum">Please input your phone number.</string>
    <string name="inputMail">Please input your e-mail.</string>
    <string name="emailError">Please enter the correct email address.</string>
    <string name="inputPassword">Please input your password.</string>
    <string name="error">Error</string>
    <string name="logging">Logging...</string>
    <string name="checkPrivacy">confirm that you have read the terms yet</string>
    <string name="userIsRegister">User already exist.</string>
    <string name="privacy">I have read and agreed to \"the use agreements and privacy policies\"</string>
    <string name="privacy1">the use agreements and privacy policies</string>
    <string name="privacy2">the use agreements and privacy policies</string>
    <string name="confirmPasswordError">Inconsistent password</string>
    <string name="privacyTip">Thank you for trusting and using SleepEE.
\n\n We will use the User Privacy Agreement to help you understand how we collect, use and store your personal information and the relevant rights you enjoy.
\n\ N When you use SleepEE app, we will collect your device information, profile picture, nickname, height, weight, exercise data and other information:
\n\n You can access, modify, delete your personal information or manage your authorization on the relevant page.
\n\n We use industry leading security technology to protect your personal information.
\n\n When you click "OK", you agree to the terms of the agreement.</string>
    <string name="retrieve">Retrieve Password</string>
    <string name="send">Send</string>
    <string name="verification">Pin Code</string>
    <string name="verificationError">Incorrect Pin code , please reconfirm.</string>
    <string name="verificationTimeOut">Invalid pin code, get a new one.</string>
    <string name="inputUser">Please inout your phone number/e-mail.</string>
    <string name="inputVerification">Please input verification code.</string>
    <string name="inoutConfirmPassword">Please confirm your password.</string>
    <string name="setPassword">Setting password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="resetSuccess">Reset password successfully.</string>
    <string name="save">Save</string>
    <string name="find">Search Device</string>
    <string name="finding">Finding</string>
    <string name="select">Select Device ID</string>
    <string name="search">No Device?Click to refrech</string>
    <string name="binding">Binding on bracelet</string>
    <string name="bindError">Bind failed,enter visitor mode</string>
    <string name="sleep">Sleep</string>
    <string name="report">Report</string>
    <string name="alarm">Alarm</string>
    <string name="me">Me</string>
    <string name="lining">Connecting...</string>
    <string name="touchAgain">Press the back button again to exit</string>
    <string name="tokenTimeout">Login has expired. Please login again</string>
    <string name="loginError">Logon failed, please check network Settings</string>
    <string name="startSleep">Start Monitor</string>
    <string name="stopSleep">Stop Monitor</string>
    <string name="bluetoochError">Bluetooth is disconnected, unable to operate.</string>
    <string name="sleepLow">Less than 30 minutes, unable to get the sleeping report.</string>
    <string name="exitAlso">Bluetooth disconnected, continue or end of sleep?</string>
    <string name="monitor">Real-time Monitor</string>
    <string name="heartUnit">B/min</string>
    <string name="heart">Heart Rate</string>
    <string name="breath">Breath Rate</string>
    <string name="turnOver">times/hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="awake">Awake</string>
    <string name="deep">Deep</string>
    <string name="mid">Middle</string>
    <string name="light">Light</string>
    <string name="realSleepTime">Total time</string>
    <string name="deepSleepTime">Deep sleep</string>
    <string name="midSleepTime">Middle sleep</string>
    <string name="lightSleepTime">Light sleep</string>
    <string name="dreamTime">Awake</string>
    <string name="wakeTimes">Turn over</string>
    <string name="sleepMonitoring">Sleeping monitor</string>
    <string name="averageSleep">Sleep Time Per Day</string>
    <string name="averageDeep">Deep sleep</string>
    <string name="averageMid">Middle sleep</string>
    <string name="averageLight">Light sleep</string>
    <string name="averageAwake">Awake</string>
    <string name="syncing">Data syncing</string>
    <string name="syncOk">Synchronization is complete</string>
    <string name="synError">Sync failed, please confirm the Bluetooth is connected</string>
    <string name="sleepReport">Your Sleep Report</string>
    <string name="more"><u>get more report</u></string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="future">No sleep data for the selected date</string>
    <string name="wakeItem">wake up</string>
    <string name="goodNightItem">bedtime</string>
    <string name="nurseItem">monitor</string>
    <string name="smart">Intelligent wake-up</string>
    <string name="wake">wake alarm</string>
    <string name="goodNight">bedtime alarm</string>
    <string name="nurse">monitor alarm</string>
    <string name="add">add</string>
    <string name="repeat">Repeat</string>
    <string name="type">Type</string>
    <string name="remark">Remark</string>
    <string name="remind">Remind Device</string>
    <string name="intelligent">Intelligent awaken</string>
    <string name="addAlarm">Add Alarm</string>
    <string name="changeAlarm">Change Alarm</string>
    <string name="phoneNoty">Phone</string>
    <string name="deviceNoty">Sleeping Belt</string>
    <string name="inputRemark">Comment the type of alarm</string>
    <string name="addClockError">Sorry, alarm list is full , add failed</string>
    <string name="power">Battery</string>
    <string name="checking">Checking...</string>
    <string name="softV">Firmware Version</string>
    <string name="deviceID">Device ID</string>
    <string name="blueMac">Bluetooth IP</string>
    <string name="unBindDevice">Unbound device</string>
    <string name="mailAcount">Email</string>
    <string name="resetPassword">Change password</string>
    <string name="noMail">No email binding</string>
    <string name="noPhone">No phone binding</string>
    <string name="logout">Log out</string>
    <string name="advise2">What Are the Stages of Sleep?</string>
    <string name="advise4">Advices for fall asleep quickly</string>
    <string name="sleepState">\t\tThere are five stages of sleep. Stages 1-4 are non-REM sleep, followed by REM sleep.</string>
    <string name="state1">STAGE 1</string>
    <string name="state2">STAGE 2</string>
    <string name="state3">STAGE 3</string>
    <string name="state4">STAGE 4</string>
    <string name="state1Info">\t\tStage 1 is light sleep where you drift in and out of sleep and can be awakened easily. In this stage, the eyes move slowly and muscle activity slows. During this stage, many people experience sudden muscle contractions preceded by a sensation of falling.</string>
    <string name="state2Info">\t\tIn stage 2, eye movement stops and brain waves become slower with only an occasional burst of rapid brain waves. The body begins to prepare for deep sleep, as the body temperature begins to drop and the heart rates slows.</string>
    <string name="state3Info">\t\tWhen a person enters stage 3, extremely slow brain waves called delta waves are interspersed with smaller, faster waves. This is deep sleep. It is during this stage that a person may experience sleepwalking, night terrors, talking during one’s sleep, and bedwetting. These behaviors are known as parasomnias, and tend to occur during the transitions between non-REM and REM sleep.</string>
    <string name="state4Info">\t\tIn stage 4, deep sleep continues as the brain produces delta waves almost exclusively. People roused from this state feel disoriented for a few minutes.</string>
    <string name="toSleep1">1.Practice progressive relaxation</string>
    <string name="toSleep2">2.Listen to music</string>
    <string name="toSleep3">3.Limit Caffeine and Drink a Soothing Beverage</string>
    <string name="toSleep4">4.Take a warm shower before bed</string>
    <string name="toSleep5">5.Turn Off All Electronics</string>
    <string name="toSleep1Info">\t\tRecommended by the National Sleep Foundation as a way to fall asleep fast, progressive muscle relaxation involves slowly tensing and then relaxing each muscle in your body to help your body relax. The Mayo Clinic describes the technique as follows:\n\t\tStart by tensing and relaxing the muscles in your toes and progressively working your way up to your neck and head. You can also start with your head and neck and work down to your toes. Tense your muscles for at least five seconds and then relax for 30 seconds, and repeat.\n\t\t“I encourage patients to try progressive relaxation,” says Meltzer. “It’s not enough by itself, but in combination with other things, it definitely makes a huge difference.”</string>
    <string name="toSleep2Info">\t\tStudies have shown that classical music, or any music that has a slow rhythm of 60 to 80 beats per minute, can help lull you to sleep. In a 2008 study, students aged 19 to 28 who listened to relaxing classical music for 45 minutes before bed showed significant improvement in sleep quality. Bonus: They also reported decreased symptoms of depression.</string>
    <string name="toSleep3Info">\t\tCaffeine is widely used among people to fight fatigue and stimulate alertness. It can be found in foods and beverages like chocolate, coffee, sodas and energy drinks.\n\t\tUnfortunately, caffeine can have disastrous effects on your sleep.\n\t\tAlthough the effects of caffeine vary from person to person, it is recommended that you refrain from consuming caffeine at least six hours before bedtime.\n\t\tInstead, you could drink a soothing tea like chamomile tea, which has been shown to promote sleep and relaxation.</string>
    <string name="toSleep4Info">\t\tWarming your body up with a hot shower an hour before bed and then stepping into cooler air will cause your body temperature to drop more precipitously. Studies show that this rapid temperature decrease slows your metabolism faster and prepares your body for sleep. “Showers can also be very relaxing, so that helps, too,” says Meltzer. If you shower every night around the same time, making it part of a consistent bedtime routine, you’ll see the most sleep value from it, she adds. “Then your body has an expectation of what’s coming next.”</string>
    <string name="toSleep5Info">\t\tUsing electronic devices late at night is terrible for sleep.\n\t\tWatching TV, playing video games, using a mobile phone and social networking can make it significantly harder for you to fall and stay asleep.\n\t\tIt is recommended that you disconnect all electronics and put away computers and mobile phones so you can ensure a quiet place, free of distractions. You will be able to fall asleep much faster.</string>
</resources>