<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advise4"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"
                android:textColor="@color/black1"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black1"
                android:text="@string/toSleep1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:textSize="13sp"
                android:textStyle="italic"
                android:text="@string/toSleep1Info"
                android:textColor="@color/black1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="14dp"
                android:textColor="@color/black1"
                android:text="@string/toSleep2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:textSize="13sp"
                android:textStyle="italic"
                android:text="@string/toSleep2Info"
                android:textColor="@color/black1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black1"
                android:text="@string/toSleep3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:textSize="13sp"
                android:textStyle="italic"
                android:text="@string/toSleep3Info"
                android:textColor="@color/black1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black1"
                android:text="@string/toSleep4"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:textSize="13sp"
                android:textStyle="italic"
                android:text="@string/toSleep4Info"
                android:textColor="@color/black1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black1"
                android:text="@string/toSleep5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="13sp"
                android:textStyle="italic"
                android:text="@string/toSleep5Info"
                android:textColor="@color/black1"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>