<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.MyDeviceActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/title1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/clock_layout_height"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ListMargin"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textColor="@color/black1"
                android:text="@string/power"/>


            <TextView
                android:id="@+id/powerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/ListMargin"
                android:layout_gravity="center_vertical|end"
                android:textColor="@color/black1"
                android:text="@string/checking"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black1"
            android:layout_marginRight="@dimen/ListMargin"
            android:layout_marginLeft="@dimen/ListMargin"/>

        <LinearLayout
            android:id="@+id/softLl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/clock_layout_height"

            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ListMargin"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textColor="@color/black1"
                android:text="@string/softV"/>


            <TextView
                android:id="@+id/softTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_gravity="center_vertical|end"
                android:textColor="@color/black1"
                android:text="1.0.3"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/ListMargin"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/me_arrow_right"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black1"
            android:layout_marginRight="@dimen/ListMargin"
            android:layout_marginLeft="@dimen/ListMargin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/clock_layout_height"

            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ListMargin"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textColor="@color/black1"
                android:text="@string/deviceID"/>


            <TextView
                android:id="@+id/deviceIDTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/ListMargin"
                android:layout_gravity="center_vertical|end"
                android:textColor="@color/black1"
                android:text="1598365"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black1"
            android:layout_marginRight="@dimen/ListMargin"
            android:layout_marginLeft="@dimen/ListMargin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/clock_layout_height"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ListMargin"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textColor="@color/black1"
                android:text="@string/blueMac"/>


            <TextView
                android:id="@+id/macTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/ListMargin"
                android:layout_gravity="center_vertical|end"
                android:textColor="@color/black1"
                android:text="10:55:45:88:12"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/black1"
            android:layout_marginRight="@dimen/ListMargin"
            android:layout_marginLeft="@dimen/ListMargin"/>

        <LinearLayout
            android:id="@+id/unbindLl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center|bottom"
            android:enabled="false">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/me_btn_unbounddevice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black1"
                android:text="@string/unBindDevice"
                android:textSize="15sp"/>

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/search_bg_bottom"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>